<resources>
    <string name="app_name">PlanerMRP</string>
    <string name="login">Login</string>
    <string name="haslo">Hasło</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="logowanie_label">Wpisz swoje dane logowania:</string>
    <string name="stworz_plan">Zaprojektuj nowy plan produkcji wybranego produktu</string>
    <string name="wpis_do_bazy">Dodaj nowy materiał, półprodukt, produkt do bazy danych</string>
    <string name="informacje">Informacje o programie</string>
    <string name="powitanie">Witaj!</string>
    <string name="ekran_glowny">Co chciałbyś zrobić:</string>
    <string name="typ_produktu_label">Typ produktu:</string>
    <string name="opis_zastosowania_dodatkowe_informacje">Opis, zastosowania, dodatkowe informacje</string>
    <string name="czas_montazu">Czas montażu</string>
    <string name="dostepne_w_magazynie">Ilość dostępna w magazynie</string>
    <string name="wielkosc_partii">Wielkość produkowanej partii</string>
    <string name="cena">Cena za jedną sztukę</string>
    <string name="dodaj_wpis">Dodaj wpis</string>
    <string name="o_aplikacji">O aplikacji</string>
    <string name="planer_mrp_v0_99">Planer MRP v0.99</string>
    <string name="OpisApki">Aplikacja dla systemu Android która pozwoli planistom firmy meblowej:\n
        \n\n-Przygotować plan produkcji wg algorytmu MRP uwzględniając czas potrzebny na wyprodukowanie produktu,
        \n\n-Ocenić koszt oraz czas potrzebny do wyprodukowania wg przygotowanego planu przez aplikacje,
        \n\n-Pobrać z bazy danych informacje o produktach które się tam znajdują oraz materiałach z których się składa wybrany produkt,
        \n\n-Dodawać nowe produkty do bazy danych które składać się będą z wybieranych materiałów a ich koszt będzie sugerowany na podstawie kosztu pojedynczego materiału,
        \n\n-Aplikacja będzie miała wspomagać decyzje dotyczące ceny produktu (obliczany będzie koszt materiałów potrzebnych do produkcji) oraz daty rozpoczęcia produkcji (wg czasu potrzebnego do wyprodukowania),
        \n\n-Aplikacja gotowy plan będzie zapisywać w formie plików Excel\'owskich na urządzeniu mobilnym.
        \n\nWszelkie informacje dotyczące bazy danych pobierane są z sieci.</string>
    <string name="wymagania_aplikacji">Wymagania aplikacji</string>
    <string name="Opiswymagan">- Dostęp do Internetu,
        \n\n- Android wersji 4.15 lub wyżej,
        \n\n- Numer karty kredytowej,
        \n\n- Numer PIN do powyższej karty,
        \n\n- Security code podany na odwrocie karty.</string>
    <string name="autorzy">Autorzy</string>
    <string name="NazwiskaAutor">Daniel Kucharczyk\nMariusz Nowak</string>
    <string name="dzien">Dzień</string>
    <string name="przewidywany_popyt">Przewidywany Popyt</string>
    <string name="produkcja">Produkcja</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="dost_pne">Dostępne</string>
    <string name="stw_rz_plan">Stwórz plan</string>

</resources>
