<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danielk.planermrp.PanelGlowny">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/welcomeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="0.07"
            android:text="@string/powitanie"
            android:textSize="24sp" />

        <Button
            android:id="@+id/stworzPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:background="#9ACD32"
            android:onClick="stworzPlan"
            android:text="@string/stworz_plan" />

        <Button
            android:id="@+id/wpisDoBazy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:background="#9ACD32"
            android:onClick="wpisDoBazy"
            android:text="@string/wpis_do_bazy" />

        <Button
            android:id="@+id/informacje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:background="#9ACD32"
            android:onClick="informacje"
            android:text="@string/informacje" />

        <Button
            android:id="@+id/opis_przyciskow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:onClick="toastOpis"
            android:text="@string/opis_przyciskow"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>
