<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danielk.planermrp.TworzeniePlanu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/dzien" />

                <TextView
                    android:id="@+id/popyt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="70dp"
                    android:text="@string/przewidywany_popyt" />

                <TextView
                    android:id="@+id/produkcja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="50dp"
                    android:text="@string/produkcja" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_1" />

                    <EditText
                        android:id="@+id/edit_n_popyt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:layout_marginLeft="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_2" />

                    <EditText
                        android:id="@+id/edit_n_popyt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:layout_marginLeft="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_3" />

                    <EditText
                        android:id="@+id/edit_n_popyt3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_4" />

                    <EditText
                        android:id="@+id/edit_n_popyt4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_5" />

                    <EditText
                        android:id="@+id/edit_n_popyt5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_6" />

                    <EditText
                        android:id="@+id/edit_n_popyt6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_7" />

                    <EditText
                        android:id="@+id/edit_n_popyt7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_8" />

                    <EditText
                        android:id="@+id/edit_n_popyt8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_9" />

                    <EditText
                        android:id="@+id/edit_n_popyt9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/day_number10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/_10" />

                    <EditText
                        android:id="@+id/edit_n_popyt10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="105dp"
                        android:layout_marginStart="105dp"
                        android:ems="4"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/edit_n_produkcje10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="55dp"
                        android:layout_marginLeft="55dp"
                        android:ems="4"
                        android:inputType="number" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
